ott-project/manifests/k8s/fastapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: registry.gitlab.com/43213422/ott-project:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: harbor-regcred
