ott-project/manifests/k8s/fastapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: ClusterIP
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
