ott-project/manifests/k8s/react-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  type: NodePort
  selector:
    app: react-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080  # 클러스터 외부 접속 가능 포트 (30000~32767)
