ott-project/manifests/k8s/react-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  type: ClusterIP
  selector:
    app: react-app
  ports:
    - port: 80
      targetPort: 80
